# semantic-alignment-via-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt
.conf/hydra/latents/: classifiers.yaml
.conf/hydra/sim/: classification.yaml  fitting_sim.yaml
scripts/: classification.py  compute_images.py  images_classification.py  latents_classifiers.py  pytorch_sim.py  train_classifier.py  wandb_downloader.py
src/: download_utils.py  neural_models.py  sim.py  utils.py
src/datamodules/: alignment.py  classifier.py  download_utils.py
src/models_tasks/: classification.py
